--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username=root
+spring.datasource.password=Mysql@7890
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8081
+
+
+
+
+eureka.instance.client.severUrl.defaultZone=http://localhost:8761/eureka/
+
+
 
